Change the distance trigger scrollbar show

We used to calculate the distance from edge to trigger scrollbar show. Now
change to use the distance from scrollbar to trigger scrollbar show.

BUG=709700
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2813643002
Cr-Commit-Position: refs/heads/master@{#464125}

Former-commit-id: 07077943755bf2cf166a2fe8c2aaab6fd46142b6